	13005 Angelic Wing Dagger:	NEED INFO.
	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

========================
04/03
	* Tried to fixup some 11.1 mob modes [Playtester]
	- a converter would be nice, anyone?
	* Raised skill usage and mode of 11.1 MVPs [Playtester]
04/02
	* Added EggBoy and EggGirl scripts [Playtester]
	- also small fixes to Aspd and Speed bonus
03/31
	* Added names to Item Group items thanks to Leon [Playtester]
	* Updated and fixed Item Groups and Doom Slayer [Playtester]
	* Fixed item name of Arm Guard [Playtester]
	* Updated some headgear names to match the translations [Playtester]
	* Fixed High Wizard card [Playtester]
	* Updated Item Givers to X.4 [Playtester]
	- they are now added up and sorted
	- fixed China Gift Box
	* More item updates thanks to Argatlahm [Playtester]
03/24
	* Fixed some item names thanks to Argatlahm [Playtester]
03/23
	* Twilight Pharmacy's cast time is no longer reducable by dex.
	* All weapon enchant levels now last 3 minutes. [Skotlex]
	* Added 11.2 weapons [Playtester]
03/22
	* Optimized Aliza Card [Lupus]
03/21
	* Increased Improve Concentration's hide-revealing range to 3 (7x7)
	  [Skotlex]
	* Fixed RSX 0806 and General Ygnizem card [Playtester]
03/20
	* Corrected itemskill calls in the item_db,
	* Made the weapon enchanting items invoke the ITEM_ENCHANTARMS skill
	* Corrected Holy Egg not being type 11 (delay consume)
	* Corrected typo in bonus bSubRace2 (it was called bSPSubRace2 for some
	  reason) [Skotlex]
	* Updated new cards [Playtester]
	- they can all be used now, however some bonuses are still incomplete
	- also fixed Byeollungum, The Sign and Turtle General Card
03/17
	* Removed .gat from configs [Lupus]
03/15